feat slack message

--- a/.github/workflows/list.yml
+++ b/.github/workflows/list.yml
@@ -83,6 +83,7 @@ jobs:
           echo "pr_numbers=$(printf '%s\n' "${PR_NUMBERS[@]}" | jq -c -s '.')" >> $GITHUB_OUTPUT
           
           echo "$COMPRESSED_JSON"
+          echo "pr_list=$(echo "$SLACK_TEXT" | jq -c .)"
           echo "slack_message_json=$COMPRESSED_JSON" >> "$GITHUB_OUTPUT"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -101,3 +102,29 @@ jobs:
           webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
           webhook-type: incoming-webhook
           payload: ${{ steps.list-prs.outputs.slack_message_json }}
+
+      - name: Send to Slack
+        uses: slackapi/slack-github-action@v2.0.0
+        with:
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook-type: incoming-webhook
+          payload: | 
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "*リリース予定のPR一覧*"
+                  }
+                }
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": ${{ steps.list-prs.outputs.pr_list }}
+                  }
+                }
+              ]
+            }
+  
