--- a/.github/workflows/list.yml
+++ b/.github/workflows/list.yml
@@ -78,7 +78,6 @@ jobs:
           )
 
           #   echo "$SLACK_JSON"
-          echo "aaa"
           COMPRESSED_JSON=$(echo "$SLACK_JSON" | jq -c .)
           echo "pr_numbers=$(printf '%s\n' "${PR_NUMBERS[@]}" | jq -c -s '.')" >> $GITHUB_OUTPUT
           
@@ -123,7 +122,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "${{ steps.list-prs.outputs.pr_list }}"
+                    "text": ${{ steps.list-prs.outputs.pr_list }}
                   }
                 }
               ]
