--- a/.github/workflows/list.yml
+++ b/.github/workflows/list.yml
@@ -20,13 +20,16 @@ jobs:
         run: |
           PR_NUMBERS=()
           
-          declare -A SEEN_PR_NUMBERS 
+          declare -A SEEN_PR_NUMBERS
           declare -A PR_AUTHOR_BY_NUMBER
           declare -A PR_TITLE_BY_NUMBER
           declare -A PR_LINK_BY_NUMBER 
+          declare -A PRS_BY_AUTHOR 
 
+          # PRに含まれるコミットを取得
           COMMIT_OIDS=$(gh pr view ${{ github.event.pull_request.number }} --json commits --jq '.commits[].oid')
 
+          # PRに含まれるコミットからPRのメタデータを取得
           for COMMIT_OID in $COMMIT_OIDS; do
             echo "Commit: $COMMIT_OID"
 
@@ -47,61 +50,27 @@ jobs:
           REPO_OWNER=$(echo "${GITHUB_REPOSITORY}" | cut -d'/' -f1)
           REPO_NAME=$(echo "${GITHUB_REPOSITORY}" | cut -d'/' -f2)
 
+          # PRリンクを作成し、authorごとにグループ化
           for PR_NUMBER in "${PR_NUMBERS[@]}"; do
             PR_LINK="https://github.com/$REPO_OWNER/$REPO_NAME/pull/$PR_NUMBER"
             PR_LINK_BY_NUMBER["$PR_NUMBER"]="$PR_LINK"
+
+            PR_AUTHOR="${PR_AUTHOR_BY_NUMBER[$PR_NUMBER]}"
+            PR_TITLE="${PR_TITLE_BY_NUMBER[$PR_NUMBER]}"
+
+            # authorごとにPRをまとめる
+            PRS_BY_AUTHOR["$PR_AUTHOR"]+="- <$PR_LINK|#$PR_NUMBER> $PR_TITLE\n"
           done
 
-
           SLACK_TEXT=""
-          if [ ${#PR_NUMBERS[@]} -gt 0 ]; then
-            for PR_NUMBER in "${PR_NUMBERS[@]}"; do
-              PR_AUTHOR="${PR_AUTHOR_BY_NUMBER[$PR_NUMBER]}"
-              PR_TITLE="${PR_TITLE_BY_NUMBER[$PR_NUMBER]}"
-              PR_LINK="${PR_LINK_BY_NUMBER[$PR_NUMBER]}"
-              SLACK_TEXT+=$(printf "%s <%s|#%s> by %s\n " "$PR_TITLE" "$PR_LINK" "$PR_NUMBER" "$PR_AUTHOR")
-            done
-          fi
-
-          SLACK_JSON=$(echo "$SLACK_TEXT" | jq -R -s \
-            '{
-              "blocks": [
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": .
-                  }
-                }
-              ]
-            }'
-          )
+          for AUTHOR in "${!PRS_BY_AUTHOR[@]}"; do
+            SLACK_TEXT+=$(printf "%s\n%s\n" "$AUTHOR" "${PRS_BY_AUTHOR[$AUTHOR]}")
+          done
 
           #   echo "$SLACK_JSON"
-          COMPRESSED_JSON=$(echo "$SLACK_JSON" | jq -c .)
-          echo "pr_numbers=$(printf '%s\n' "${PR_NUMBERS[@]}" | jq -c -s '.')" >> $GITHUB_OUTPUT
-          
-          echo "$COMPRESSED_JSON"
           echo "pr_list=$(jq -R -s . <<< "$SLACK_TEXT")" >> "$GITHUB_OUTPUT"
-          echo "slack_message_json=$COMPRESSED_JSON" >> "$GITHUB_OUTPUT"
-          echo "$pr_list"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Format message to send to slack
-        id: format-message
-        run: |
-          PR_NUMBERS='${{ steps.list-prs.outputs.pr_numbers }}'
-          PR_AUTHOR_BY_NUMBER='${{ steps.list-prs.outputs.pr_author_by_number }}'
-          echo "$PR_NUMBERS"
-          echo "$PR_AUTHOR_BY_NUMBER"
-
-      - name: Send to Slack
-        uses: slackapi/slack-github-action@v2.0.0
-        with:
-          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
-          webhook-type: incoming-webhook
-          payload: ${{ steps.list-prs.outputs.slack_message_json }}
 
       - name: Send to Slack
         uses: slackapi/slack-github-action@v2.0.0
