group by author

--- a/.github/workflows/list.yml
+++ b/.github/workflows/list.yml
@@ -68,12 +68,7 @@ jobs:
           done
 
           #   echo "$SLACK_JSON"
-          # echo "pr_list=$(jq -R . <<< "$SLACK_TEXT")" >> "$GITHUB_OUTPUT"
-          {
-            echo "pr_list<<EOF"
-            echo -e "$SLACK_TEXT"
-            echo "EOF"
-          } >> "$GITHUB_OUTPUT"
+          echo "pr_list=$(jq -R -s. <<< "$SLACK_TEXT")" >> "$GITHUB_OUTPUT"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
