--- a/.github/workflows/list.yml
+++ b/.github/workflows/list.yml
@@ -20,11 +20,13 @@ jobs:
         run: |
           PR_NUMBERS=()
           
-          declare -A SEEN_PR_NUMBERS
           declare -A PR_AUTHOR_BY_NUMBER
           declare -A PR_TITLE_BY_NUMBER
           declare -A PR_LINK_BY_NUMBER 
           declare -A PRS_BY_AUTHOR 
+
+          REPO_OWNER=$(echo "${GITHUB_REPOSITORY}" | cut -d'/' -f1)
+          REPO_NAME=$(echo "${GITHUB_REPOSITORY}" | cut -d'/' -f2)
 
           # PRに含まれるコミットを取得
           COMMIT_OIDS=$(gh pr view ${{ github.event.pull_request.number }} --json commits --jq '.commits[].oid')
@@ -36,21 +38,19 @@ jobs:
             PR_DETAILS=$(gh pr list --search "$COMMIT_OID" --state merged --json number,author,title --jq '.[0]')
             PR_NUMBER=$(echo "$PR_DETAILS" | jq -r '.number')
 
-            if [[ -z "${SEEN_PR_NUMBERS[$PR_NUMBER]}" ]]; then
-              PR_NUMBERS+=("$PR_NUMBER")
-              SEEN_PR_NUMBERS["$PR_NUMBER"]=1
-
-              PR_AUTHOR=$(echo "$PR_DETAILS" | jq -r '.author.login')
-              PR_TITLE=$(echo "$PR_DETAILS" | jq -r '.title')
-              PR_AUTHOR_BY_NUMBER["$PR_NUMBER"]="$PR_AUTHOR"
-              PR_TITLE_BY_NUMBER["$PR_NUMBER"]="$PR_TITLE"
+            # 一度取得したPRはスキップ
+            if [[ " ${PR_NUMBERS[@]} " =~ " $PR_NUMBER " ]]; then
+              continue
             fi
+
+            PR_NUMBERS+=("$PR_NUMBER")
+            PR_AUTHOR=$(echo "$PR_DETAILS" | jq -r '.author.login')
+            PR_TITLE=$(echo "$PR_DETAILS" | jq -r '.title')
+            PR_AUTHOR_BY_NUMBER["$PR_NUMBER"]="$PR_AUTHOR"
+            PR_TITLE_BY_NUMBER["$PR_NUMBER"]="$PR_TITLE"
           done
 
-          REPO_OWNER=$(echo "${GITHUB_REPOSITORY}" | cut -d'/' -f1)
-          REPO_NAME=$(echo "${GITHUB_REPOSITORY}" | cut -d'/' -f2)
-
-          # PRリンクを作成し、authorごとにグループ化
+          # PRリンクを作成し、Authorごとにグループ化
           for PR_NUMBER in "${PR_NUMBERS[@]}"; do
             PR_LINK="https://github.com/$REPO_OWNER/$REPO_NAME/pull/$PR_NUMBER"
             PR_LINK_BY_NUMBER["$PR_NUMBER"]="$PR_LINK"
@@ -58,13 +58,13 @@ jobs:
             PR_AUTHOR="${PR_AUTHOR_BY_NUMBER[$PR_NUMBER]}"
             PR_TITLE="${PR_TITLE_BY_NUMBER[$PR_NUMBER]}"
 
-            # authorごとにPRをまとめる
             PRS_BY_AUTHOR["$PR_AUTHOR"]+="<$PR_LINK|#$PR_NUMBER> $PR_TITLE\n"
           done
 
+          # すべてのPRリストをテキストとして出力
           PR_LIST=""
           for AUTHOR in "${!PRS_BY_AUTHOR[@]}"; do
-            PR_LIST+=$(printf "%s\n%b\n" "$AUTHOR" "${PRS_BY_AUTHOR[$AUTHOR]}")
+            PR_LIST+=$(printf "*%s*\n%b\n" "$AUTHOR" "${PRS_BY_AUTHOR[$AUTHOR]}")
           done
 
           echo "pr_list=$(jq -R -s . <<< "$PR_LIST")" >> "$GITHUB_OUTPUT"
