--- a/.github/workflows/list.yml
+++ b/.github/workflows/list.yml
@@ -50,6 +50,16 @@ jobs:
             PR_TITLE_BY_NUMBER["$PR_NUMBER"]="$PR_TITLE"
           done
 
+          # PRがない場合はhotfix扱いとして、このPRのAuthorとTitleを取得する
+          if [ ${#PR_NUMBERS[@]} -eq 0 ]; then
+            PR_AUTHOR=${{github.event.pull_request.user.login}}
+            PR_TITLE=${{github.event.pull_request.title}}
+            PR_NUMBER=${{ github.event.pull_request.number }} 
+
+            PR_AUTHOR_BY_NUMBER["$PR_NUMBER"]="$PR_AUTHOR"
+            PR_TITLE_BY_NUMBER["$PR_NUMBER"]="$PR_TITLE"
+          fi
+
           # PRのリンクを作成し、Authorごとにグループ化する
           for PR_NUMBER in "${PR_NUMBERS[@]}"; do
             PR_LINK="https://github.com/$REPO_OWNER/$REPO_NAME/pull/$PR_NUMBER"
