--- a/.github/workflows/list.yml
+++ b/.github/workflows/list.yml
@@ -2,9 +2,9 @@ name: List Merged PRs for Release
 
 on:
   pull_request:
-    types: [opened, synchronize]
-    branches:
-      - main
+    branches: [ "main" ]
+  merge_group:
+    types: [checks_requested]
 
 jobs:
   list-prs:
