--- a/.github/workflows/list.yml
+++ b/.github/workflows/list.yml
@@ -38,7 +38,7 @@ jobs:
             PR_DETAILS=$(gh pr list --search "$COMMIT_OID" --state merged --json number,author,title --jq '.[0]')
             PR_NUMBER=$(echo "$PR_DETAILS" | jq -r '.number')
 
-            # 一度取得したPRはスキップ
+            # 一度取得したPRはスキップする
             if [[ " ${PR_NUMBERS[@]} " =~ " $PR_NUMBER " ]]; then
               continue
             fi
