--- a/.github/workflows/list.yml
+++ b/.github/workflows/list.yml
@@ -1,10 +1,9 @@
 name: List Merged PRs for Release
 
 on:
-  pull_request:
-    branches: [ "main" ]
-  merge_group:
-    types: [checks_requested]
+  push:
+    branches:
+      - main
 
 jobs:
   list-prs:
