--- a/.github/workflows/list.yml
+++ b/.github/workflows/list.yml
@@ -28,6 +28,7 @@ jobs:
           REPO_NAME=$(echo "${GITHUB_REPOSITORY}" | cut -d'/' -f2)
 
           # PRに含まれるコミットを取得
+          echo ${{ github.event.pull_request.head.sha }}
           COMMIT_OIDS=$(gh pr view ${{ github.event.pull_request.number }} --json commits --jq '.commits[].oid')
 
           # PRに含まれるコミットからPRのメタデータを取得
