--- a/.github/workflows/list.yml
+++ b/.github/workflows/list.yml
@@ -52,7 +52,7 @@ jobs:
             PR_TITLE_BY_NUMBER["$PR_NUMBER"]="$PR_TITLE"
           done
 
-          # PRがない場合はhotfix扱いとして、このPRをリストに追加する
+          # PRがない場合はhotfix扱いとして、このPRをリストに追加
           if [ ${#PR_NUMBERS[@]} -eq 0 ]; then
             PR_NUMBER=${{ github.event.pull_request.number }}
             PR_AUTHOR=${{github.event.pull_request.user.login}}
