--- a/.github/workflows/list.yml
+++ b/.github/workflows/list.yml
@@ -64,7 +64,7 @@ jobs:
             PR_TITLE_BY_NUMBER["$PR_NUMBER"]="$PR_TITLE"
           fi
 
-          # PRのリンクを作成し、Authorごとにグループ化する
+          # PRのリンクを作成し、Authorごとにグループ化
           for PR_NUMBER in "${PR_NUMBERS[@]}"; do
             PR_LINK="https://github.com/$REPO_OWNER/$REPO_NAME/pull/$PR_NUMBER"
             PR_LINK_BY_NUMBER["$PR_NUMBER"]="$PR_LINK"
