--- a/.github/workflows/list.yml
+++ b/.github/workflows/list.yml
@@ -9,15 +9,6 @@ jobs:
   list-prs:
     runs-on: ubuntu-latest
     steps:
-      - name: Install GitHub CLI
-        run: |
-          sudo apt update
-          sudo apt install -y gh
-
-      - name: Echo GitHub CLI version
-        run: |
-          gh --version
-
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
@@ -33,20 +24,27 @@ jobs:
           declare -A PR_LINK_BY_NUMBER 
           declare -A PRS_BY_AUTHOR 
 
-          REPO_OWNER=$(echo "${GITHUB_REPOSITORY}" | cut -d'/' -f1)
-          REPO_NAME=$(echo "${GITHUB_REPOSITORY}" | cut -d'/' -f2)
+          REPO_OWNER=$(echo "${{ github.repository }}" | cut -d'/' -f1)
+          REPO_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f2)
 
           # ActionsがトリガーされたPRの番号を取得
-          TRIGGER_PR_NUMBER=$(gh pr list --search ${{ github.event.head_commit.id }} --state merged --json number --jq '.[].number')
+          TRIGGER_PR_NUMBER=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                                   -H "Accept: application/vnd.github.v3+json" \
+                                   "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/commits/${{ github.event.head_commit.id }}/pulls" | jq -r '.[].number')
 
+          echo "Trigger PR: $TRIGGER_PR_NUMBER"                       
           # ActionsがトリガーされたPRに含まれるコミットを取得
-          COMMIT_OIDS=$(gh pr view $TRIGGER_PR_NUMBER --json commits --jq '.commits[].oid')
+          COMMIT_OIDS=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                            -H "Accept: application/vnd.github.v3+json" \
+                            "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/pulls/$TRIGGER_PR_NUMBER/commits" | jq -r '.[].sha')
 
           # ActionsがトリガーされたPRに含まれるコミットからメタデータを取得
           for COMMIT_OID in $COMMIT_OIDS; do
             echo "Commit: $COMMIT_OID"
 
-            PR_DETAILS=$(gh pr list --search "$COMMIT_OID" --state merged --json number,author,title --jq '.[0]')
+            PR_DETAILS=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                          -H "Accept: application/vnd.github.v3+json" \
+                          "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/commits/$COMMIT_OID/pulls" | jq -r '.[0]')
             PR_NUMBER=$(echo "$PR_DETAILS" | jq -r '.number')
 
             # 一度取得したPRはスキップ、またActionsがトリガーされたPRと同じPRもスキップ
@@ -55,7 +53,7 @@ jobs:
             fi
 
             PR_NUMBERS+=("$PR_NUMBER")
-            PR_AUTHOR=$(echo "$PR_DETAILS" | jq -r '.author.login')
+            PR_AUTHOR=$(echo "$PR_DETAILS" | jq -r '.user.login')
             PR_TITLE=$(echo "$PR_DETAILS" | jq -r '.title')
             PR_AUTHOR_BY_NUMBER["$PR_NUMBER"]="$PR_AUTHOR"
             PR_TITLE_BY_NUMBER["$PR_NUMBER"]="$PR_TITLE"
@@ -66,8 +64,10 @@ jobs:
             PR_NUMBER=$TRIGGER_PR_NUMBER
             PR_NUMBERS+=($PR_NUMBER) 
 
-            TRIGGER_PR_DETAILS=$(gh pr list --search ${{ github.event.head_commit.id }} --state merged --json author,title --jq '.[0]')
-            PR_AUTHOR=$(echo "$TRIGGER_PR_DETAILS" | jq -r '.author.login')
+            TRIGGER_PR_DETAILS=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                          -H "Accept: application/vnd.github.v3+json" \
+                          "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/commits/${{ github.event.head_commit.id }}/pulls" | jq -r '.[0]')
+            PR_AUTHOR=$(echo "$TRIGGER_PR_DETAILS" | jq -r '.user.login')
             PR_TITLE=$(echo "$TRIGGER_PR_DETAILS" | jq -r '.title')
 
             PR_AUTHOR_BY_NUMBER["$PR_NUMBER"]="$PR_AUTHOR"
