--- a/.github/workflows/list.yml
+++ b/.github/workflows/list.yml
@@ -86,7 +86,7 @@ jobs:
           fi
 
           ##############################################################################
-          # PRリンク作成および作者ごとにグループ化
+          # PRリンク作成およびAuthorごとにグループ化
           ##############################################################################
           for pr_number in "${PR_NUMBERS[@]}"; do
             pr_link="${GITHUB_API}/pull/${pr_number}"
